syntax = "proto3";

package easyrent.admin.command;

service Command {
    rpc LoadUnverifiedAgents(LoadAgentsRequest) returns (Agents) {}
    rpc LoadUnverifiedPosts(LoadPostsRequest) returns (Posts) {}
}

message LoadAgentsRequest {}
message LoadPostsRequest {}

message UnverifiedAgent {
  string corp = 1;
  string corp_id = 2;
  string com_regd_addr = 3;
  string contact = 4;
  string name = 5;
  string password = 6;
}

message UnverifiedRentPost {
  string name = 1;
  string phone = 2;
  string room_addr = 3;
  int32 room_area = 4;
  string room_type = 5;
  string room_orientation = 6;
  int32 room_floor = 7;
  string description = 8;
  int32 price = 9;
  string restriction = 10;
  string create_by = 11;
  string uuid = 12;
  string release_time = 13;
  repeated bytes pictures = 14;
}

message UnverifiedHelpPost {
  string name = 1;
  string phone = 2;
  string expected_addr = 3;
  int32 expected_price = 4;
  string demands = 5;
  string create_by = 6;
  string uuid = 7;
  string release_time = 8;
}

message PostPackage {
  repeated UnverifiedRentPost rent_posts = 1;
  repeated UnverifiedHelpPost help_posts = 2;
}

message Agents {
    repeated UnverifiedAgent agent = 1;
}

message Posts {
    PostPackage posts = 1;
}
